Fixes to Mobbern to: - Fixes to unnecessary z-index

--- a/styles/Mobbern3.3/theme/style.css
+++ b/styles/Mobbern3.3/theme/style.css
@@ -19,6 +19,11 @@ blockquote.uncited {
     padding-top: 5px;
 }
 
+.post:target {
+    /* Prevent the header menu from going under the post preview */
+    z-index: unset;
+}
+
 .postbody .content,
 .post:target .content {
     /* Match forum content color in preview */
